--- a/WIX_API.yaml
+++ b/WIX_API.yaml
@@ -94,118 +94,63 @@ paths:
               '204':
                 description: Coupon deleted successfully.   
                               
-    /_functions/giftCard/redeem:
-        patch:
-          tags:
-          - GiftCard
-          summary:  Redeems a gift card.
-          description:  Redeems a gift card.
-          requestBody:
+    /_function/refund/{orderId}:
+      post:
+        summary: Refund specific items from an order
+        description: Process a partial refund for one or more items in an order.
+        operationId: refundOrderItems
+        tags:
+          - Orders
+        parameters:
+          - name: orderId
+            in: path
             required: true
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/BaseGiftCard'
-          responses:
-            '200':
-              description: Gift card redeemed successfully.
-              content:
-                application/json:
-                  schema:
-                    type: object
-                    properties:
-                      status:
-                        type: string
-                        description: Indicates whether the gift card was redeemed successfully.                             
-    /_functions/giftCard/create:
-      post:
-        tags:
-          - GiftCard
-        summary: Creates a new giftCard / TBD
-        description: Creates a new giftCard.
+            description: The ID of the order to refund items from.
+            schema:
+              type: string
         requestBody:
           required: true
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BaseGiftCard' 
+                type: object
+                properties:
+                  refundReason:
+                    type: string
+                    example: "Customer returned items"
+                  items:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        itemId:
+                          type: string
+                          example: "ITEM-001"
+                        quantity:
+                          type: integer
+                          example: 1
         responses:
-          '201':
-            description: GiftCard created successfully.
+          '200':
+            description: Refund processed successfully
             content:
               application/json:
                 schema:
-                  $ref: '#/components/schemas/ExtendedGiftCard'                               
+                  type: object
+                  properties:
+                    refundId:
+                      type: string
+                      example: "REFUND-98765"
+                    status:
+                      type: string
+                      example: "success"
+          '400':
+            description: Invalid request
+          '404':
+            description: Order not found
+          '500':
+            description: Server error
                   
-    /_functions/discounts/create:
-      post:
-        tags:
-          - Discount
-        summary: Creates a new discount. / TBD
-        description: Creates a new discount.
-        requestBody:
-          required: true
-          content:
-            application/json:
-              schema:
-                # במקום $ref, נשתמש בדוגמה לאובייקט
-                example: 
-                  {
-                    "id": "a1b2c3d4-e5f6-7890-1234-567890abcdef",
-                    "revision": "1",
-                    "createdDate": "2023-10-26T12:00:00.000Z",
-                    "updatedDate": "2023-10-26T12:00:00.000Z",
-                    "active": true,
-                    "name": "Golf club discount",
-                    "activeTimeInfo": {
-                      "start": "2023-10-26T12:00:00.000Z",
-                      "end": "2023-11-26T12:00:00.000Z"
-                    },
-                    "discounts": {
-                      "values": [
-                        {
-                          "targetType": "SPECIFIC_ITEMS",
-                          "discountType": "FIXED_AMOUNT",
-                          "fixedAmount": "100",
-                          "specificItemsInfo": {
-                            "scopes": [
-                              {
-                                "_id": "WIXSTORES_DEFAULT_ALL_ITEMS_SCOPE_ID",
-                                "type": "CATALOG_ITEM",
-                                "catalogItemFilter": {
-                                  "catalogAppId": "WIXSTORES_APP_ID"
-                                }
-                              }
-                            ]
-                          }
-                        }
-                      ]
-                    },
-                    "status": "LIVE",
-                    "usageCount": 0,
-                    "trigger": {
-                      "triggerType": "SUBTOTAL_RANGE",
-                      "subtotalRange": {
-                        "from": "300",
-                        "scopes": [
-                          {
-                            "_id": "WIXSTORES_DEFAULT_ALL_ITEMS_SCOPE_ID",
-                            "type": "CATALOG_ITEM",
-                            "catalogItemFilter": {
-                              "catalogAppId": "WIXSTORES_APP_ID"
-                            }
-                          }
-                        ]
-                      }
-                    }
-                  }
-        responses:
-          '201':
-            description: Discount created successfully.
-            content:
-              application/json:
-                schema:
-                  $ref: '#/components/schemas/ExtendedDiscount'                    
+                 
 
 components:
   schemas:
