--- a/WIX_API.yaml
+++ b/WIX_API.yaml
@@ -177,7 +177,52 @@ paths:
           '500':
             description: Server error
                   
-                 
+    /_function/status/{orderId}:
+      post:
+        summary: Update status for an order.
+        description:  Update status for an order.
+        tags:
+          - Orders
+        parameters:
+          - name: orderId
+            in: path
+            required: true
+            description: The ID of the order.
+            schema:
+              type: string
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "Approved"
+                  trackingOrder:
+                    type: object
+                    properties:
+                      number:
+                        type: string
+                      link:
+                        type: string
+        responses:
+          '200':
+            description: Refund processed successfully
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    message:
+                      type: string
+          '400':
+            description: Invalid request
+          '404':
+            description: Order not found
+          '500':
+            description: Server error             
 
 components:
   schemas:
