--- a/WIX_API.yaml
+++ b/WIX_API.yaml
@@ -69,7 +69,7 @@ paths:
                   schema:
                     $ref: '#/components/schemas/ExtendedCategory'
     /_functions/category/update:
-        patch:
+        post:
             tags:
             - Category
             summary: Updates existing categories.
